...
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oRb-QG-h0z">
                                <rect key="frame" x="16" y="216" width="361" height="40"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qaA-5T-MLw">
                                        <rect key="frame" x="0.0" y="5.6666666666666661" width="30" height="28.666666666666671"/>
                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                        <accessibility key="accessibilityConfiguration" label="SimulateDiffsCheckbox">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="30" id="tsY-RN-YrZ"/>
                                            <constraint firstAttribute="width" secondItem="qaA-5T-MLw" secondAttribute="height" multiplier="1:1" id="zOP-99-CZv"/>
                                        </constraints>
...
                                <color key="backgroundColor" red="0.59607843137254901" green="0.66666666666666663" blue="0.76862745098039209" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="CQ9-J2-TTa"/>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="Gx2-iA-Mzw"/>
                                </constraints>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Tap me!"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                        <integer key="value" value="5"/>
                                    </userDefinedRuntimeAttribute>
                                </userDefinedRuntimeAttributes>
                                <connections>
...
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Lih-lF-7aR">
                                        <rect key="frame" x="124" y="35" width="113" height="65"/>
                                        <accessibility key="accessibilityConfiguration" identifier="BottomImage" label="ThumbUpOrBugImageView">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="113" id="6FB-lg-d8h"/>
                                            <constraint firstAttribute="height" constant="65" id="OFM-KT-aoQ"/>
                                        </constraints>
...
